Fixed to not use the sun.misc Base 64 stuff and use our class instead; reported in Jira #OFBIZ-620
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6990 deaff617-5be1-0310-a1b7-ec6878f92ba9